# CDNUploader

./: .gitignore  AGENT.md  FileStructure.md  ProjectSpec.md  README.md  TODOS.md  pyproject.toml  secrets.json.template
cdn_upload/: __init__.py  ai.py  cli.py  config.py  models.py  parser.py  process.py  storage.py  upload.py  utils.py
tests/: __init__.py  test_ai.py  test_parser.py  test_process.py  test_upload.py
